Fix overflows.

--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -49,7 +49,8 @@ strong
   transition transform 1000ms ease
 
 .screen
-  overflow hidden
+  overflow-x hidden
+  overflow-y auto
 
 ::-webkit-scrollbar
     width 5px
