--- a/src/client/screens/fifth-screen.styl
+++ b/src/client/screens/fifth-screen.styl
@@ -52,6 +52,7 @@
     max-width 80%
     transition all .25s
     padding 20px 0px
+    margin-bottom 15px
 
     &[disabled]
       opacity 0.5
@@ -114,7 +115,7 @@
 
     h2
       font-size 16px
-    
+
     input[type=text]
       font-size 14px
       margin-bottom 10px
@@ -123,7 +124,7 @@
       padding 10px 0px
       span
         font-size 16px
-    
+
     #drop
       height auto
       margin-bottom 30px
