--- a/src/client/screens/first-screen.styl
+++ b/src/client/screens/first-screen.styl
@@ -3,6 +3,7 @@
   background-size cover
   background-attachment fixed
   position relative
+  overflow-y hidden
 
   &:after
     content ''
