--- a/src/client/screens/fourth-screen.styl
+++ b/src/client/screens/fourth-screen.styl
@@ -18,10 +18,10 @@
     font-weight 300
     color #010101
     margin-bottom 10px
-    
-  p 
+
+  p
     text-align center
-    
+
     margin 0px 0px 60px
 
   ul
@@ -74,9 +74,6 @@
           background-position -32px 0
 
 @media (max-width: 767px)
-  .fourth-screen
-    overflow-y scroll
-
     > .chevron
       width 100%
       position initial
