--- a/src/client/screens/second-screen.styl
+++ b/src/client/screens/second-screen.styl
@@ -1,5 +1,6 @@
 .second-screen
   position relative
+  overflow-y hidden
 
   > div
     position absolute
@@ -55,18 +56,18 @@
 
 
 
-@media (max-width: 767px) 
+@media (max-width: 767px)
   .second-screen
     > div
       width 100%
-      
+
       > h1
         position relative
         width auto
         font-size 12 vw
         text-align center
         left initial
-        
+
         span:nth-child(2)
           left initial
         span:nth-child(3)
