--- a/src/client/screens/third-screen.styl
+++ b/src/client/screens/third-screen.styl
@@ -1,4 +1,5 @@
 .third-screen
+  overflow-y hidden
 
   ul
     display block
@@ -67,9 +68,6 @@
       width 55%
 
 @media (max-width: 767px)
-  .third-screen
-    overflow-y scroll
-
     ul
 
       li
